--- a/AppTool/build.gradle
+++ b/AppTool/build.gradle
@@ -37,8 +37,10 @@ dependencies {
     implementation(rootProject.ext.dependencies["annotation"])
     implementation(rootProject.ext.dependencies["constraintlayout"])
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
-    //权限库
     implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
+    implementation 'com.github.yangchong211.YCStatusBar:StatusBarLib:1.4.6'
     implementation project(path: ':AppUpdateLib')
     //其他
     implementation project(path: ':RoundCorners')
