--- a/AppTool/src/main/AndroidManifest.xml
+++ b/AppTool/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.YCAppTool2">
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
         <activity android:name=".ToolMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".UploadActivity"/>
     </application>
 
 </manifest>
