--- a/ToolLib/AppUpdateLib/build.gradle
+++ b/ToolLib/AppUpdateLib/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     api 'com.liulishuo.filedownloader:library:1.7.5'
     //权限库
     implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.3.5'
+    implementation project(path: ':ToolFileLib')
 }
 
