--- a/ToolLib/AppUpdateLib/build.gradle
+++ b/ToolLib/AppUpdateLib/build.gradle
@@ -32,5 +32,7 @@ dependencies {
     //权限库
     implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.3.5'
     implementation project(path: ':ToolFileLib')
+    //同上上报库
+    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.5'
 }
 
