--- a/ToolLib/AppUpdateLib/build.gradle
+++ b/ToolLib/AppUpdateLib/build.gradle
@@ -31,7 +31,9 @@ dependencies {
     api 'com.liulishuo.filedownloader:library:1.7.5'
     //权限库
     implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.3.5'
+    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
     implementation project(path: ':ToolFileLib')
+    implementation project(path: ':RoundCorners')
     //同上上报库
     implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.5'
 }
