--- a/settings.gradle
+++ b/settings.gradle
@@ -106,7 +106,7 @@ project(':DataCloneLib').projectDir = new File('CommonLib/DataCloneLib')
 
 /* +++++++++ 框架view基础组件层 +++++++++ */
 include ':BannerViewLib', ':PhotoWidget', ':CustomWidget', ':BlurViewLib',
-        ':FragmentLib',':ZoomImageLib', ':LargeImageLib',
+        ':ZoomImageLib', ':LargeImageLib',
         ':SwipeBackLib', ':StatusBarLib', ':AppStateLib', ':WebViewLib',
         ':ToastUtils', ':FloatPageLib', ':NotifyMessage', ':NotificationLib',
         ':DialogFragment', ':SnackBar', ':PopupWindow', ':BaseDialog', ':RoundCorners',
@@ -119,7 +119,6 @@ project(':BannerViewLib').projectDir = new File('WidgetLib/BannerViewLib')
 project(':PhotoWidget').projectDir = new File('WidgetLib/PhotoWidget')
 project(':CustomWidget').projectDir = new File('WidgetLib/CustomWidget')
 project(':BlurViewLib').projectDir = new File('WidgetLib/BlurViewLib')
-project(':FragmentLib').projectDir = new File('WidgetLib/FragmentLib')
 project(':ZoomImageLib').projectDir = new File('WidgetLib/ZoomImageLib')
 project(':LargeImageLib').projectDir = new File('WidgetLib/LargeImageLib')
 project(':SwipeBackLib').projectDir = new File('WidgetLib/SwipeBackLib')
