--- a/CommonLib/AppLogLib/build.gradle
+++ b/CommonLib/AppLogLib/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["annotation"]
     implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':ToolFileLib')
 }
