--- a/AppCommon/src/main/AndroidManifest.xml
+++ b/AppCommon/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".reflect.ReflectionActivity"/>
         <activity android:name=".file.FileActivity"/>
+        <activity android:name=".vp2.ViewPager2Activity"/>
     </application>
 
 
