--- a/AppCommon/build.gradle
+++ b/AppCommon/build.gradle
@@ -29,7 +29,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
+    implementation rootProject.ext.dependencies["constraintlayout"]
     implementation rootProject.ext.dependencies["annotation"]
+    implementation rootProject.ext.dependencies["viewpager2"]
+    implementation rootProject.ext.dependencies["material"]
 
     //base基类
     implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
