--- a/AppCommon/build.gradle
+++ b/AppCommon/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation rootProject.ext.dependencies["material"]
 
     //base基类
-    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
+//    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
     implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.3.5'
     //工具类utils
     implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
@@ -75,7 +75,7 @@ dependencies {
     implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:1.3.5'
 
     //公共类
-//    implementation project(path: ':BaseClassLib')
+    implementation project(path: ':BaseClassLib')
 //    implementation project(path: ':ComponentLib')
 //    implementation project(path: ':ToolUtilsLib')
 //    implementation project(path: ':ActivityManager')
