完善viewpage封装抽取

--- a/AppCommon/build.gradle
+++ b/AppCommon/build.gradle
@@ -76,6 +76,7 @@ dependencies {
 
     //公共类
     implementation project(path: ':BaseClassLib')
+    implementation project(path: ':BaseVpAdapter')
 //    implementation project(path: ':ComponentLib')
 //    implementation project(path: ':ToolUtilsLib')
 //    implementation project(path: ':ActivityManager')
