--- a/AptHelper/BuildTimeCostPlugin/build.gradle
+++ b/AptHelper/BuildTimeCostPlugin/build.gradle
@@ -7,6 +7,7 @@ sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
 
 repositories {
+    google()
     mavenLocal()
     mavenCentral()
     jcenter()
