--- a/Business/AnimBusiness/build.gradle
+++ b/Business/AnimBusiness/build.gradle
@@ -74,4 +74,5 @@ dependencies {
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     api project(path: ':BusinessInterface')
     implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':ApplicationLib')
 }
