--- a/Business/BleBusiness/build.gradle
+++ b/Business/BleBusiness/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation project(path: ':ToolUtilsLib')
     implementation project(path: ':AppLogLib')
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
-
+    implementation project(path: ':ApplicationLib')
 }
 
 
