--- a/CommonLib/ApplicationLib/build.gradle
+++ b/CommonLib/ApplicationLib/build.gradle
@@ -30,8 +30,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
-
-    implementation project(path: ':ServiceLoaderApi')
-    implementation project(path: ':ServiceLoaderAnnotations')
-    annotationProcessor project(path: ':ServiceLoaderProcessor')
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
 }
