--- a/AppServer/build.gradle
+++ b/AppServer/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation(rootProject.ext.dependencies["constraintlayout"])
+    implementation(rootProject.ext.dependencies["gson"])
+    implementation(rootProject.ext.dependencies["okhttp"])
+    implementation(rootProject.ext.dependencies["lifecycleRuntime"])
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation project(path: ':LibraryLayer')
     implementation project(path: ':ToolUtilsLib')
@@ -47,5 +50,11 @@ dependencies {
     implementation project(path: ':MonitorFileLib')
     implementation project(path: ':BellsVibrations')
     implementation project(path: ':PrivateServer')
+    implementation project(path: ':OkHttpServer')
+    implementation project(path: ':GsonServer')
+    implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':NetInterceptor')
+    implementation project(path: ':MonitorInterceptor')
+    implementation project(path: ':ToolFileLib')
 }
 
