修改tts播放完成监听

--- a/AppWidget/build.gradle
+++ b/AppWidget/build.gradle
@@ -51,7 +51,6 @@ dependencies {
     implementation project(path: ':ZoomImageLib')
     implementation project(path: ':RedDotView')
     implementation project(path: ':ExpandLib')
-
-    implementation project(path: ':AnimBusiness')
+    implementation project(path: ':FloatWindow')
 }
 
