--- a/AppCommon/src/main/AndroidManifest.xml
+++ b/AppCommon/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".vp2.ViewPager2Activity"/>
         <activity android:name=".vp.ViewPagerActivity"/>
         <activity android:name=".tab.VpTabActivity"/>
+        <activity android:name=".encypt.EncyptActivity"/>
     </application>
 
 
