--- a/AppWidget/build.gradle
+++ b/AppWidget/build.gradle
@@ -38,9 +38,10 @@ dependencies {
     implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.5'
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
+    //implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
     implementation 'com.github.yangchong211.YCStatusBar:StatusBarLib:1.4.6'
     implementation 'com.hyman:flowlayout-lib:1.1.2'
+    implementation project(path: ':ToolUtilsLib')
     implementation project(path: ':AppTextView')
     implementation project(path: ':AppChartView')
     implementation project(path: ':RoundCorners')
