feat：完善图片缩放比计算和判断图片角度

--- a/settings.gradle
+++ b/settings.gradle
@@ -70,7 +70,7 @@ include ':AppStatusLib',':ToolUtilsLib',':FragmentManager',':AppCompress',
         ':ArchitectureLib',':ActivityManager', ':ToolFileLib',':EventUploadLib',
         ':AppCommonInter',':ToolMemoryLib',':AppPermission',':PhoneSensor',
         ':AppLruDisk',':AppLruCache',':DownloadHelper',':AppEncryptLib',
-        ':AppMediaStore',':DataCloneLib',':AppScreenLib',':BaseVpAdapter'
+        ':AppMediaStore',':DataCloneLib',':AppScreenLib',':BaseVpAdapter',':ImageToolLib'
 project(':AppStatusLib').projectDir = new File('CommonLib/AppStatusLib')
 project(':ToolUtilsLib').projectDir = new File('CommonLib/ToolUtilsLib')
 project(':ComponentLib').projectDir = new File('CommonLib/ComponentLib')
@@ -100,6 +100,8 @@ project(':AppMediaStore').projectDir = new File('CommonLib/AppMediaStore')
 project(':DataCloneLib').projectDir = new File('CommonLib/DataCloneLib')
 project(':AppScreenLib').projectDir = new File('CommonLib/AppScreenLib')
 project(':BaseVpAdapter').projectDir = new File('CommonLib/BaseVpAdapter')
+project(':ImageToolLib').projectDir = new File('CommonLib/ImageToolLib')
+
 
 
 /* +++++++++ 框架view基础组件层 +++++++++ */
