--- a/ServerLib/CompressServer/build.gradle
+++ b/ServerLib/CompressServer/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
+    implementation project(path: ':ImageToolLib')
 }
