--- a/ServerLib/CompressServer/build.gradle
+++ b/ServerLib/CompressServer/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation project(path: ':ImageToolLib')
+    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
 }
