--- a/ServerLib/CompressServer/build.gradle
+++ b/ServerLib/CompressServer/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation project(path: ':ImageToolLib')
+    implementation project(path: ':ToolFileLib')
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
 }
