feat：完善图片案例代码

--- a/AppCommon/build.gradle
+++ b/AppCommon/build.gradle
@@ -103,4 +103,7 @@ dependencies {
     implementation project(path: ':MonitorFileLib')
     implementation project(path: ':AppLruCache')
     implementation project(path: ':AppLruDisk')
+    implementation project(path: ':CompressServer')
+    implementation project(path: ':AppCompress')
+    implementation project(path: ':ImageToolLib')
 }
