feat：完善图片保存和刷新到相册

--- a/ServerLib/ImageServer/build.gradle
+++ b/ServerLib/ImageServer/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["annotation"])
     implementation rootProject.ext.dependencies["glide"]
     implementation project(path: ':ToolFileLib')
+    implementation project(path: ':ImageToolLib')
     annotationProcessor rootProject.ext.dependencies["glide-compiler"]
     implementation rootProject.ext.dependencies["okhttp"]
     implementation project(path: ':ToolUtilsLib')
