--- a/CommonLib/ImageToolLib/src/main/AndroidManifest.xml
+++ b/CommonLib/ImageToolLib/src/main/AndroidManifest.xml
@@ -2,4 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.imagetoollib">
 
+    <!--网络-->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 读写文件 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+
 </manifest>
