--- a/Business/JetpackBusiness/src/main/AndroidManifest.xml
+++ b/Business/JetpackBusiness/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         <activity android:name="com.yc.jetpack.study.navigation.NavigationActivity"/>
         <activity android:name="com.yc.jetpack.study.livedata.LiveDataActivity"/>
         <activity android:name="com.yc.jetpack.study.model.ViewModelActivity"/>
+        <activity android:name="com.yc.jetpack.study.lifecycle.LifecycleActivity"/>
     </application>
 
 </manifest>
