--- a/CommonLib/ArchitectureLib/build.gradle
+++ b/CommonLib/ArchitectureLib/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["lifecycle"])
     // room 使用kapt，fix RoomDatabase_Impl does not exist
     implementation(rootProject.ext.dependencies["roomRuntime"])
+    implementation project(path: ':ToolUtilsLib')
     //kapt(rootProject.ext.dependencies["roomCompiler"])
     annotationProcessor(rootProject.ext.dependencies["roomCompiler"])
     //WorkManager
