--- a/MonitorLib/MonitorNetLib/build.gradle
+++ b/MonitorLib/MonitorNetLib/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
     implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
     implementation project(path: ':MonitorPingLib')
-    //implementation project(path: ':VideoView')
+    implementation project(path: ':VideoView')
     implementation project(path: ':AppCompress')
     //状态栏：https://github.com/yangchong211/YCStatusBar
     implementation 'com.github.yangchong211.YCStatusBar:StatusBarLib:1.4.6'
