--- a/AppWidget/src/main/AndroidManifest.xml
+++ b/AppWidget/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity android:name=".zoom.ImageViewActivity"/>
         <activity android:name=".red.RedViewActivity"/>
         <activity android:name=".floatpage.FloatActivity"/>
+        <activity android:name=".blur.BlurActivity"/>
+        <activity android:name=".banner.MeBannerActivity"/>
     </application>
 
 
