feat：完善优化轮播图案例

--- a/AppWidget/build.gradle
+++ b/AppWidget/build.gradle
@@ -71,5 +71,6 @@ dependencies {
     implementation project(path: ':BlurViewLib')
     implementation project(path: ':LibraryLayer')
     implementation project(path: ':ImageServer')
+    implementation project(path: ':BannerViewLib')
 }
 
