--- a/AppHelper/build.gradle
+++ b/AppHelper/build.gradle
@@ -125,59 +125,59 @@ android {
 
     //lint配置信息，这里主要是设置自定义lint检测后报告路径，LintOptions类型
     //命令行：gradlew lint      注意，studio自带lint检查，setting——> Inspection
-    lintOptions {
-        println("开始执行lint检测代码逻辑")
-        // 设置为 true，则当 Lint 发现错误时停止 Gradle 构建
-        //移除lint检测的error
-        abortOnError false
-        // 设置为 true，则当有错误时会显示文件的全路径或绝对路径 (默认情况下为true)
-        absolutePaths true
-        // 仅检查指定的问题（根据 id 指定）
-        check 'NewApi', 'InlinedApi'
-        // 设置为 true 则检查所有的问题，包括默认不检查问题
-        checkAllWarnings true
-        // 设置为 true 后，release 构建都会以 Fatal 的设置来运行 Lint。
-        // 如果构建时发现了致命（Fatal）的问题，会中止构建（具体由 abortOnError 控制）
-        checkReleaseBuilds true
-        // 不检查指定的问题（根据问题 id 指定）
-        disable 'TypographyFractions','TypographyQuotes'
-        // 检查指定的问题（根据 id 指定）
-        enable 'RtlHardcoded','RtlCompat', 'RtlEnabled'
-        // 在报告中是否返回对应的 Lint 说明
-        explainIssues true
-        // 写入报告的路径，默认为构建目录下的 lint-results.html
-        //htmlOutput file("lint-report.html")
-        // 设置为 true 则会生成一个 HTML 格式的报告
-        htmlReport true
-        // 设置为 true 则只报告错误
-        ignoreWarnings true
-        // 重新指定 Lint 规则配置文件
-        //lintConfig file("default-lint.xml")
-        // 设置为 true 则错误报告中不包括源代码的行号
-        noLines true
-        // 设置为 true 时 Lint 将不报告分析的进度
-        quiet true
-        // 设置为 true 则显示一个问题所在的所有地方，而不会截短列表
-        showAll true
-        // 配置写入输出结果的位置，格式可以是文件或 stdout
-        textOutput 'stdout'
-        // 设置为 true，则生成纯文本报告（默认为 false）
-        textReport false
-        // 设置为 true，则会把所有警告视为错误处理
-        warningsAsErrors true
-        // 写入检查报告的文件（不指定默认为 lint-results.xml）
-        //xmlOutput file("lint-report.xml")
-        // 设置为 true 则会生成一个 XML 报告
-        xmlReport false
-        // 将指定问题（根据 id 指定）的严重级别（severity）设置为 Fatal
-        fatal 'NewApi', 'InlineApi'
-        // 将指定问题（根据 id 指定）的严重级别（severity）设置为 Error
-        error 'Wakelock', 'TextViewEdits'
-        // 将指定问题（根据 id 指定）的严重级别（severity）设置为 Warning
-        warning 'ResourceAsColor'
-        // 将指定问题（根据 id 指定）的严重级别（severity）设置为 ignore
-        ignore 'TypographyQuotes'
-    }
+//    lintOptions {
+//        println("开始执行lint检测代码逻辑")
+//        // 设置为 true，则当 Lint 发现错误时停止 Gradle 构建
+//        //移除lint检测的error
+//        abortOnError false
+//        // 设置为 true，则当有错误时会显示文件的全路径或绝对路径 (默认情况下为true)
+//        absolutePaths true
+//        // 仅检查指定的问题（根据 id 指定）
+//        check 'NewApi', 'InlinedApi'
+//        // 设置为 true 则检查所有的问题，包括默认不检查问题
+//        checkAllWarnings true
+//        // 设置为 true 后，release 构建都会以 Fatal 的设置来运行 Lint。
+//        // 如果构建时发现了致命（Fatal）的问题，会中止构建（具体由 abortOnError 控制）
+//        checkReleaseBuilds true
+//        // 不检查指定的问题（根据问题 id 指定）
+//        disable 'TypographyFractions','TypographyQuotes'
+//        // 检查指定的问题（根据 id 指定）
+//        enable 'RtlHardcoded','RtlCompat', 'RtlEnabled'
+//        // 在报告中是否返回对应的 Lint 说明
+//        explainIssues true
+//        // 写入报告的路径，默认为构建目录下的 lint-results.html
+//        //htmlOutput file("lint-report.html")
+//        // 设置为 true 则会生成一个 HTML 格式的报告
+//        htmlReport true
+//        // 设置为 true 则只报告错误
+//        ignoreWarnings true
+//        // 重新指定 Lint 规则配置文件
+//        //lintConfig file("default-lint.xml")
+//        // 设置为 true 则错误报告中不包括源代码的行号
+//        noLines true
+//        // 设置为 true 时 Lint 将不报告分析的进度
+//        quiet true
+//        // 设置为 true 则显示一个问题所在的所有地方，而不会截短列表
+//        showAll true
+//        // 配置写入输出结果的位置，格式可以是文件或 stdout
+//        textOutput 'stdout'
+//        // 设置为 true，则生成纯文本报告（默认为 false）
+//        textReport false
+//        // 设置为 true，则会把所有警告视为错误处理
+//        warningsAsErrors true
+//        // 写入检查报告的文件（不指定默认为 lint-results.xml）
+//        //xmlOutput file("lint-report.xml")
+//        // 设置为 true 则会生成一个 XML 报告
+//        xmlReport false
+//        // 将指定问题（根据 id 指定）的严重级别（severity）设置为 Fatal
+//        fatal 'NewApi', 'InlineApi'
+//        // 将指定问题（根据 id 指定）的严重级别（severity）设置为 Error
+//        error 'Wakelock', 'TextViewEdits'
+//        // 将指定问题（根据 id 指定）的严重级别（severity）设置为 Warning
+//        warning 'ResourceAsColor'
+//        // 将指定问题（根据 id 指定）的严重级别（severity）设置为 ignore
+//        ignore 'TypographyQuotes'
+//    }
 
 }
 
@@ -193,9 +193,9 @@ dependencies {
     implementation project(path: ':CustomWidget')
     implementation project(path: ':CountTimerLib')
     implementation project(path: ':ToolUtilsLib')
-    implementation project(path: ':DemoBusiness')
-    implementation project(path: ':AnimBusiness')
-    implementation project(path: ':StatusBusiness')
+//    implementation project(path: ':DemoBusiness')
+//    implementation project(path: ':AnimBusiness')
+//    implementation project(path: ':StatusBusiness')
     implementation project(path: ':AppStatusLib')
 
     implementation project(path: ':LocaleHelperLib')
@@ -224,24 +224,24 @@ dependencies {
     //implementation project(path: ':AutoCloserLib')
 //    implementation(rootProject.ext.dependencies["AppStartLib"])
     implementation project(path: ':ParallelTaskLib')
-    implementation project(path: ':MvpTodoBusiness')
-    implementation project(path: ':MvvmDatabinding')
-    implementation project(path: ':MvvmTodoLive')
-    implementation project(path: ':MvcTodoBusiness')
+//    implementation project(path: ':MvpTodoBusiness')
+//    implementation project(path: ':MvvmDatabinding')
+//    implementation project(path: ':MvvmTodoLive')
+//    implementation project(path: ':MvcTodoBusiness')
     implementation project(path: ':BusinessInterface')
     implementation project(path: ':ThreadPoolLib')
-    implementation project(path: ':JetpackBusiness')
+//    implementation project(path: ':JetpackBusiness')
     implementation project(path: ':AppProcessLib')
     implementation project(path: ':NotifyMessage')
     implementation project(path: ':BaseClassLib')
     implementation project(path: ':AppTraceTool')
     implementation project(path: ':AppLogLib')
-    implementation project(path: ':BleBusiness')
+//    implementation project(path: ':BleBusiness')
     implementation project(path: ':AppBaseStore')
     implementation project(path: ':AppCommon')
-    implementation project(path: ':ThreadBusiness')
-    implementation project(path: ':NotifyBusiness')
-    implementation project(path: ':KotlinBusiness')
+//    implementation project(path: ':ThreadBusiness')
+//    implementation project(path: ':NotifyBusiness')
+//    implementation project(path: ':KotlinBusiness')
     implementation project(path: ':MonitorFpsLib')
     implementation project(path: ':AppCommonInter')
     implementation project(path: ':AppLogHelper')
