--- a/MonitorLib/MonitorFileLib/build.gradle
+++ b/MonitorLib/MonitorFileLib/build.gradle
@@ -44,5 +44,6 @@ dependencies {
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation project(path: ':AppCompress')
     implementation project(path: ':ToolFileLib')
+    implementation project(path: ':FileIoHelper')
     implementation project(path: ':AppMediaStore')
 }
