--- a/CommonLib/AppMediaStore/build.gradle
+++ b/CommonLib/AppMediaStore/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
     implementation project(path: ':ToolFileLib')
+    implementation project(path: ':FileIoHelper')
 }
