--- a/CommonLib/FileIoHelper/build.gradle
+++ b/CommonLib/FileIoHelper/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
+    implementation project(path: ':ToolFileLib')
+
 }
