--- a/MonitorLib/MonitorCrashLib/build.gradle
+++ b/MonitorLib/MonitorCrashLib/build.gradle
@@ -43,11 +43,12 @@ dependencies {
     implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.5'
     implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.5'
     implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.5'
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
+    //implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
     //implementation project(path: ':BaseClassLib')
     //implementation project(path: ':AppRestartLib')
     //implementation project(path: ':ActivityManager')
     //implementation project(path: ':EventUploadLib')
+    implementation project(path: ':ToolUtilsLib')
     implementation 'com.github.yangchong211.YCRefreshView:EastAdapterLib:3.0.2'
     //implementation project(path: ':EastAdapterLib')
     //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
@@ -60,4 +61,10 @@ dependencies {
     implementation project(path: ':AppCompress')
     //腾讯mmkv库
     implementation "com.tencent:mmkv-static:1.2.7"
+    implementation project(path: ':ToolFileLib')
+    implementation project(path: ':FileIoHelper')
+    implementation project(path: ':AppScreenLib')
+    implementation project(path: ':AppMediaStore')
+    implementation project(path: ':ImageToolLib')
+    implementation project(path: ':AppEncryptLib')
 }
