--- a/AppPlayer/build.gradle
+++ b/AppPlayer/build.gradle
@@ -40,16 +40,16 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.annotation:annotation:1.1.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation(rootProject.ext.dependencies["appcompat"])
+    implementation(rootProject.ext.dependencies["annotation"])
+    implementation(rootProject.ext.dependencies["constraintlayout"])
+    implementation(rootProject.ext.dependencies["recyclerview"])
+    implementation(rootProject.ext.dependencies["cardview"])
+    implementation(rootProject.ext.dependencies["material"])
     implementation 'pub.devrel:easypermissions:3.0.0'
 
     //其他库
-    implementation 'com.github.bumptech.glide:glide:4.9.0'                 //谷歌图片加载库
+    implementation(rootProject.ext.dependencies["glide"])
     implementation 'jp.wasabeef:glide-transformations:2.0.1'
 
     //exo的UI库
