--- a/AppTool/build.gradle
+++ b/AppTool/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation(rootProject.ext.dependencies["constraintlayout"])
+    implementation(rootProject.ext.dependencies["recyclerview"])
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.3.5'
     implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
@@ -45,5 +46,7 @@ dependencies {
     //其他
     implementation project(path: ':RoundCorners')
     implementation project(path: ':MonitorFileLib')
+    implementation project(path: ':TransitionHelper')
+    implementation project(path: ':LibraryLayer')
 }
 
