--- a/Business/LibraryLayer/build.gradle
+++ b/Business/LibraryLayer/build.gradle
@@ -120,7 +120,6 @@ dependencies {
     //ServiceLoader
     api 'com.github.yangchong211.YCAppTool:ServiceLoaderApi:1.4.3'
     implementation project(path: ':BaseClassLib')
-    implementation project(path: ':BaseClassLib')
     implementation project(path: ':EventUploadLib')
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
 
@@ -135,4 +134,6 @@ dependencies {
     implementation project(path: ':HttpServer')
     implementation project(path: ':ImageServer')
     implementation project(path: ':CountTimerLib')
+
+    implementation project(path: ':RoundCorners')
 }
