--- a/AppMvx/build.gradle
+++ b/AppMvx/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
 }
-apply plugin: 'kotlin-android'
 apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
 
 
@@ -10,7 +9,7 @@ android {
     buildToolsVersion rootProject.ext.android["buildToolsVersion"]
 
     defaultConfig {
-        applicationId "com.yc.apptool"
+        applicationId "com.yc.appmonitor"
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
@@ -36,18 +35,4 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation(rootProject.ext.dependencies["constraintlayout"])
-    implementation(rootProject.ext.dependencies["recyclerview"])
-    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
-    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.3.5'
-    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
-    implementation 'com.github.yangchong211.YCStatusBar:StatusBarLib:1.4.6'
-    implementation project(path: ':AppUpdateLib')
-    //其他
-    implementation project(path: ':RoundCorners')
-    implementation project(path: ':MonitorFileLib')
-    implementation project(path: ':TransitionHelper')
-    implementation project(path: ':LibraryLayer')
-    implementation project(path: ':AnimBusiness')
 }
-
