--- a/Business/AnimBusiness/build.gradle
+++ b/Business/AnimBusiness/build.gradle
@@ -56,9 +56,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api(rootProject.ext.dependencies["appcompat"])
-    api(rootProject.ext.dependencies["annotation"])
-    api(rootProject.ext.dependencies["constraintlayout"])
+    implementation(rootProject.ext.dependencies["appcompat"])
+    implementation(rootProject.ext.dependencies["annotation"])
+    implementation(rootProject.ext.dependencies["constraintlayout"])
+    implementation(rootProject.ext.dependencies["material"])
 //    implementation project(path: ':AnimatorToolLib')
     implementation 'com.github.yangchong211.YCAppTool:AnimatorToolLib:1.3.7'
     implementation project(path: ':LibraryLayer')
