--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,7 @@ include ':AppServer'
 include ':AppCommon'
 include ':AppWebView'
 include ':AppTool'
+include ':AppMvx'
 
 
 /* +++++++++ 业务组件层 +++++++++ */
